--- a/PRY_CSS_ACTIVIDAD/view/externo.html
+++ b/PRY_CSS_ACTIVIDAD/view/externo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAGINA</title>
+    <link rel="stylesheet" href="../public/css/externo.css">
 </head>
 <body>
     <header>
